feat: add refresh token auth flow, bd login -> username
